[gd_scene load_steps=6 format=2]

[ext_resource path="res://ProgressBar.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.768627, 0.211765, 0.211765, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.87451, 0.705882, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 352.508
margin_top = 251.296
margin_right = 632.508
margin_bottom = 265.296
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
script = ExtResource( 1 )

[node name="ProgressBar2" type="ProgressBar" parent="ProgressBar"]
show_behind_parent = true
margin_right = 280.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="ProgressBar"]
wait_time = 0.3
one_shot = true

[node name="Button" type="Button" parent="."]
margin_left = 376.721
margin_top = 401.517
margin_right = 608.721
margin_bottom = 421.517

[connection signal="timeout" from="ProgressBar/Timer" to="ProgressBar" method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="ProgressBar" method="_on_Button_pressed"]
